--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "pantheon-systems/drupal-integrations": "^9",
         "cweagans/composer-patches": "^1.7",
         "drush/drush": "^11 || ^12",
-        "drupal/mailchimp": "^2.0"
+        "drupal/mailchimp": "^2.0",
+        "drupal/key": "^1.16",
+        "drupal/lockr": "^4.0"
     },
     "require-dev": {
         "drupal/core-dev": "^9.2"
