--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "drush/drush": "^11 || ^12",
         "drupal/mailchimp": "^2.0",
         "drupal/key": "^1.16",
-        "drupal/lockr": "^4.0"
+        "drupal/lockr": "^4.0",
+        "drupal/libraries": "4.0"
     },
     "require-dev": {
         "drupal/core-dev": "^9.2"
