updated remote repo : from $pantheon_repo to env.pantheon_repo

--- a/.github/workflows/deploy-to-pantheon.yml
+++ b/.github/workflows/deploy-to-pantheon.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - 'master'
-jobs:
+jobs:\
   build:
     runs-on: ubuntu-latest
     steps:
@@ -17,7 +17,5 @@ jobs:
       env:
         pantheon_repo: '${{ secrets.PANTHEON_REPO }}'
       run: |
-        git remote add pantheon $pantheon_repo
-        git add -A
-        git commit -m "Deploy to Pantheon"
-        git push pantheon master
+        git remote add pantheon env.pantheon_repo
+        git push pantheon HEAD:master
