--- a/.github/workflows/deploy-to-pantheon.yml
+++ b/.github/workflows/deploy-to-pantheon.yml
@@ -15,7 +15,7 @@ jobs:
         known_hosts: ${{ secrets.KNOWN_HOSTS }}
     - name: deployer
       env:
-        pantheon_repo: ${{ secrets.PANTHEON_REPO }}
+        pantheon_repo: '${{ secrets.PANTHEON_REPO }}'
       run: |
-        git remote add pantheon env.pantheon_repo
+        git remote add pantheon ssh://codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6@codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6.drush.in:2222/~/repository.git v-d9
         git push pantheon HEAD:master
