--- a/.github/workflows/deploy-to-pantheon.yml
+++ b/.github/workflows/deploy-to-pantheon.yml
@@ -17,5 +17,5 @@ jobs:
       env:
         pantheon_repo: '${{ secrets.PANTHEON_REPO }}'
       run: |
-        git remote add origin ssh://codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6@codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6.drush.in:2222/~/repository.git v-d9
+        git remote add -m origin ssh://codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6@codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6.drush.in:2222/~/repository.git v-d9
         
