--- a/.github/workflows/deploy-master-to-pantheon.yml
+++ b/.github/workflows/deploy-master-to-pantheon.yml
@@ -23,7 +23,7 @@ jobs:
         pantheon_site_name: '${{ secrets.PANTHEON_SITE_NAME }}'
       run: |
         echo ${{ secrets.KNOWN_HOSTS }}
-        git remote add pantheon $pantheon_repo
+        git remote add pantheon  'ssh://codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6@codeserver.dev.941d2f97-5700-459a-bb11-89868d8cc1c6.drush.in:2222/~/repository.git'
         git push pantheon HEAD:master
         commit_message=$(git log -1 --pretty=%B)
         terminus env:deploy $pantheon_site_name.test --note="Automated deploy: $commit_message"
